--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <img src="assets/cashavenir_transparent.png" alt="Logo Cash Avenir">
       <img src="assets/espace_anne_frank-removebg-preview.png" alt="Logo Espace Anne Frank">
     </div>
-    © 2025 - Action : Éducation financiére - Atelier - Prévention des arnaques  | JCE x Cash Avenir x Espace Anne Frank
+    © 2025 - Action : Éducation financière - Atelier - Prévention des arnaques  | JCE x Cash Avenir x Espace Anne Frank
   </footer>
 
 </body>
